Fix alignment in login and signup form

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,4 +1,10 @@
-body { margin: 0; padding: 0; }
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 { margin: 0; padding: 0; }
 
 ul,li { margin: 0; padding: 0; list-style: none }
 
